# data-lineage-ml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  run_tests.py
examples/: agro.ipynb  basic_pipeline.py  oyo_audit_report.html  oyo_drift_simulation.db  oyo_lineage_biased.db  oyo_lineage_fixed.db
src/datalineageml/: __init__.py  report.py
src/datalineageml/analysis/: __init__.py  attributor.py  cross_run.py  metrics.py  profiler.py  sensitive_cols.py  shift_detector.py
src/datalineageml/integrations/: __init__.py  pandas_integration.py
src/datalineageml/replay/: __init__.py  replayer.py
src/datalineageml/storage/: __init__.py  sqlite_store.py
src/datalineageml/trackers/: __init__.py  context.py  decorator.py
src/datalineageml/visualization/: __init__.py  graph.py
tests/unit/: test_attributor.py  test_context.py  test_cross_run.py  test_decorator.py  test_global_store.py  test_ks.py  test_metrics.py  test_profiler.py  test_replayer.py  test_report.py  test_sensitive_cols.py  test_shift_detector.py  test_store.py
