[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name        = "datalineageml"
version     = "0.2.0"
description = "Causal data provenance for AI safety — automatically identify which pipeline step caused your model's bias or fairness failure."
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.8"

authors = [
    { name = "Oluwafemi Philip Adejumobi", email = "oluwafemip.adejumobi@gmail.com" },
]

keywords = [
    "machine-learning", "data-lineage", "mlops", "ai-safety",
    "bias-detection", "fairness", "causal-inference", "data-provenance",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

# Core dependencies — zero mandatory dependencies is the design goal.
# Everything here is stdlib or extremely lightweight.
dependencies = []

# ── Optional dependency groups ────────────────────────────────────────────────
[project.optional-dependencies]

# Visualization — interactive lineage DAG
viz = [
    "networkx>=3.0",
    "plotly>=5.0",
]

# Pandas integration helpers
pandas = [
    "pandas>=1.5",
]

# Analysis — fairness metrics and shift detection
# scipy is optional; KS test falls back to approximation without it
analysis = [
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

# Everything for full functionality
all = [
    "networkx>=3.0",
    "plotly>=5.0",
    "pandas>=1.5",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

# Development tools
dev = [
    "networkx>=3.0",
    "plotly>=5.0",
    "pandas>=1.5",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

# ── URLs ──────────────────────────────────────────────────────────────────────
[project.urls]
Homepage      = "https://github.com/adejumobioluwafemi/data-lineage-ml"
Documentation = "https://github.com/adejumobioluwafemi/data-lineage-ml#readme"
Repository    = "https://github.com/adejumobioluwafemi/data-lineage-ml"
"Bug Tracker" = "https://github.com/adejumobioluwafemi/data-lineage-ml/issues"
Changelog     = "https://github.com/adejumobioluwafemi/data-lineage-ml/blob/main/CHANGELOG.md"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"datalineageml" = ["py.typed"]   # PEP 561 — signals the package has type hints

# ── Pytest configuration ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts      = "-v --tb=short"

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by black
    "F401",   # unused import — too noisy in __init__.py files
]